# pathway

./: .gitattributes  .gitignore  .vale.ini  CONTRIBUTING.md  README.md  cabal.project  flake.nix  garnix.yaml  nix-ci.nix
.cache/vale/Vocab/pathway/: accept.txt
.config/: mustache.yaml
.config/flake/: outputs.nix
.config/nix/: outputs.nix
.config/project/: default.nix  github-ci.nix  hackage-publish.nix
.github/: settings.yml
.github/workflows/: build.yml  flakehub-publish.yml  hackage-publish.yml
.local/state/cabal/freeze/: macos-13-8.10.1.freeze  macos-13-8.8.1--prefer-oldest.freeze  macos-13-9.0.1--prefer-oldest.freeze  macos-13-9.4.1--prefer-oldest.freeze  macos-13-9.4.1.freeze  macos-13-9.6.1--prefer-oldest.freeze  macos-14-9.4.5--prefer-oldest.freeze  macos-14-9.4.5.freeze  macos-14-9.8.1.freeze  ubuntu-24.04-8.10.1--prefer-oldest.freeze  ubuntu-24.04-8.6.1--prefer-oldest.freeze  ubuntu-24.04-8.6.1.freeze  ubuntu-24.04-8.8.1.freeze  ubuntu-24.04-9.0.1.freeze  ubuntu-24.04-9.10.1--prefer-oldest.freeze  ubuntu-24.04-9.10.1.freeze  ubuntu-24.04-9.2.1--prefer-oldest.freeze  ubuntu-24.04-9.2.1.freeze  ubuntu-24.04-9.6.1.freeze  windows-2022-8.10.1.freeze  windows-2022-8.6.1.freeze  windows-2022-8.8.1.freeze  windows-2022-9.0.1.freeze  windows-2022-9.10.1--prefer-oldest.freeze  windows-2022-9.2.1--prefer-oldest.freeze  windows-2022-9.4.1.freeze  windows-2022-9.6.1--prefer-oldest.freeze  windows-2022-9.8.1.freeze
compat/base/: pathway-compat-base.cabal
compat/base/docs/: license-report.md
compat/base/src/System/Environment/: Overlay.hs  Pathway.hs  Thin.hs
compat/base/src/System/IO/: Overlay.hs  Pathway.hs  Thin.hs
compat/base/src/System/IO/Error/: Overlay.hs  Pathway.hs  Thin.hs
compat/directory/: pathway-compat-directory.cabal
compat/directory/src/: Common.hs
compat/directory/src/System/Directory/: Caught.hs  Common.hs  Error.hs  Overlay.hs  Pathway.hs  Thin.hs
compat/directory/src/System/Directory/OsPath/: Caught.hs  Overlay.hs  Pathway.hs  Thin.hs
compat/directory/src/System/IO/: Error.hs
compat/file-io/: CHANGELOG.md  README.md  pathway-compat-file-io.cabal
compat/file-io/docs/: license-report.md
compat/file-io/src/System/File/OsPath/: Overlay.hs  Pathway.hs  Thin.hs
compat/filepath/: README.md  pathway-compat-filepath.cabal
compat/filepath/src/: Common.hs
compat/filepath/src/Common/: FilePath.hs  OsPath.hs
compat/filepath/src/System/FilePath/: Overlay.hs  Pathway.hs  Thin.hs
compat/filepath/src/System/OsPath/: Overlay.hs  Pathway.hs  Thin.hs
compat/temporary/: CHANGELOG.md  pathway-compat-temporary.cabal
compat/temporary/src/System/IO/Temp/: Overlay.hs  Thin.hs
internal/: CHANGELOG.md  README.md  pathway-internal.cabal
internal/Data/Path/: Internal.hs
internal/docs/: license-report.md
internal/src/Data/Path/: Internal.hs
internal/src/Data/Path/Internal/: List.hs  Relativity.hs  Resolution.hs  Type.hs
path/: README.md  Setup.hs  pathway-path.cabal
path/Data/Path/Integration/: Path.hs
path/docs/: license-report.md
path/src/Data/Path/Integration/: Path.hs
pathway/: .ghci  README.md  pathway.cabal
pathway/Data/: Path.hs
pathway/Data/Path/: Directory.hs  File.hs  Format.hs  Parser.hs  TH.hs
pathway/docs/: license-report.md
pathway/src/Data/: Path.hs
pathway/src/Data/Path/: Ambiguous.hs  Anchored.hs  Any.hs  Directory.hs  File.hs  Format.hs  Functor.hs  NonReparented.hs  Parser.hs  Relativity.hs  TH.hs  Type.hs  Unambiguous.hs
quickcheck/: CHANGELOG.md  README.md  Setup.hs  pathway-quickcheck.cabal
quickcheck/Test/Path/: QuickCheck.hs
quickcheck/docs/: license-report.md
quickcheck/src/Test/Path/: QuickCheck.hs
system/: README.md  pathway-system.cabal
system/Filesystem/: Path.hs
system/docs/: license-report.md
system/src/Filesystem/: Path.hs
system/src/Filesystem/Path/: Compat.hs  Internal.hs
system/src/System/: Path.hs  Text.hs
system/src/System/Path/: Compat.hs
